Goodreads links, alt text, removed unnecessary image CSS
Added Goodreads links & alt text for all of the review images

Removed width for div.image.main img from CSS. No longer needed to fix image size

--- a/archive-reviews/artificial.html
+++ b/archive-reviews/artificial.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Artificial Condition by Martha Wells</h1>
-							<div class="image main"><img src="../images/artificial.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/36223860-artificial-condition?ref=nav_sb_ss_1_20"><img src="../images/artificial.jpg" alt="An image of the Artificial Condition cover. Murderbot stands at the edge of a dock dressed in a space suit with a giant spaceship behind it. A quoted review from Ann Leckie reads: I love Murderbot!"/></a></div>
 							
                             <section class="basics">
 							    <p>June 29, 2023 </p>
