--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Legendary by Stephanie Garber</h1>
-							<div class="image main"><img src="../images/legendary.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/36329818-legendary?ref=nav_sb_ss_1_9"><img src="../images/legendary.jpg" alt="A copy of Legendary sits face forward on a book shelf. On the left are visible spines for books called Winter and Gilded. To the right are book spines for Supernova and Eragon. Above Legendary lay the horizontal spines for books titled Finale and Once Upon a Broken Heart. The cover depicts the title written in an elaborate script, with a red spade behind it and teal line art surrounding everything."/></a></div>
 							
                             <section class="basics">
 							    <p>June 13, 2023 - June 21, 2023 </p>
