--- a/archive-reviews/red.html
+++ b/archive-reviews/red.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>All Systems Red by Martha Wells</h1>
-							<div class="image main"><img src="../images/red.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/32758901-all-systems-red?ref=nav_sb_ss_1_15"><img src="../images/red.jpg" alt="An image of the All Systems Red cover. Murderbot stands front and center in a space suit with the silhouette of tall trees in the background the beginnings of a sunrise. A quoted review from Ann Leckie reads: I love Murderbot!"/></a></div>
 							
                             <section class="basics">
 							    <p> June 8, 2023 </p>
