--- a/archive-reviews/sacrifice.html
+++ b/archive-reviews/sacrifice.html
@@ -51,7 +51,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Sacrifice by Rin Chupeco</h1>
-							<div class="image main"><img src="../images/sacrifice.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/60190092-the-sacrifice?ref=nav_sb_ss_1_25"><img src="../images/sacrifice.jpg" alt="An image of cover for The Sacrifice. Giant green hands wrapped in vines cover the eyes and chin of Alon. Only their mouth and bottom of their nose are visible. Dispersed throughout the cover are makahiya leaves, long strands with lots of tiny leaves and dotted with small puffy pink flowers. The tagline reads: They were warned. They didn't listen."/></a></div>
 							
                             <section class="basics">
 							    <p> September 21, 2023 - September 25, 2023 </p>
