--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Sadie by Courtney Summers</h1>
-							<div class="image main"><img src="../images/sadie.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/34810320-sadie?ref=nav_sb_ss_1_5"><img src="../images/sadie.jpg" alt="An image of the cover for Sadie. Against a white background stands an indistinct girl in a red zip-up with her hair obscuring her face. She is only visible from the waist up. A quoted review from A.J.Finn, #1 bestselling author of The Woman in the Window, states: Flat-out dazzling. The tagline reads: if she dies, she takes the truth with her."/></a></div>
 							
                             <section class="basics">
 							    <p> April 7, 2023 - April 14, 2023 </p>
