--- a/main-reviews/1-inheritance.html
+++ b/main-reviews/1-inheritance.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Inheritance Games by Jennifer Lynn Barnes</h1>
-							<div class="image main"><img src="../images/inheritance.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/52439531-the-inheritance-games?ref=nav_sb_ss_1_17"><img src="../images/inheritance.jpg" alt="The cover for The Inheritance Games with the tagline: She came from nothing. They have everything. Let the games begin."/></a></div>
 							
 							<section class="basics">
 								<p>May 3, 2023 - May 8, 2023</p>
