--- a/main-reviews/10-rot.html
+++ b/main-reviews/10-rot.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Together We Rot by Skyla Arndt</h1>
-							<div class="image main"><img src="../images/rot.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/63933651-together-we-rot?ref=nav_sb_ss_1_15"><img src="../images/rot.jpg" alt="An image of the Together We Rot cover. Wil and Elwood embrace each other. Roots grow up from the ground to wrap around them. Elwood's translucent chest shows a moth and roots growing around his rib cage. More moths are spread out across the cover, flying or landing on the cover and the characters. The tagline reads: Secrets are stronger than blood. The Morguewood is full of both. "/></a></div>
 							
                             <section class="basics">
 								<p> September 5, 2023 - September 10, 2023 </p>
