--- a/main-reviews/11-hide.html
+++ b/main-reviews/11-hide.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Hide by Kiersten White</h1>
-							<div class="image main"><img src="../images/hide.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/58890948-hide?ref=nav_sb_ss_3_4"><img src="../images/hide.jpg" alt="An image of the Hide cover. Under the title stands a giant black ferris wheel atop a giant clump of black land with roots hanging underneath. In front of the ferris wheel is a black tree with a vine of red leaves growing down in front of the clump of land."/></a></div>
 							
                             <section class="basics">
 								<p> September 11, 2023 - September 14, 2023 </p>
