--- a/main-reviews/12-hallowe'en.html
+++ b/main-reviews/12-hallowe'en.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Hallowe'en Party by Agatha Christie</h1>
-							<div class="image main"><img src="../images/hallowe'en.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/16307.Hallowe_en_Party?ref=nav_sb_ss_2_11"><img src="../images/hallowe'en.jpg" alt="An image of the Hallowe'en Party cover. The author title takes up the top half of the cover. Underneath is a small full moon that illuminats a pumpking and some gnarled trees bare of leaves."/></a></div>
 							
                             <section class="basics">
 							    <p> September 14, 2023 - September 19, 2023 </p>
