--- a/main-reviews/2-cemetery.html
+++ b/main-reviews/2-cemetery.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Cemetery Boys by Aidan Thomas</h1>
-							<div class="image main"><img src="../images/cemetery.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/52339313-cemetery-boys?ref=nav_sb_ss_1_13"><img src="../images/cemetery.jpg" alt="An image of the Cemetery Boys hardcover leaned against a wall. Surrounding it are five tarot cards stuck to the wall. On top of the book is a card of Lady Death. On the left side is a card of Yadriel holding his portaje (his ceremonial knife) and underneath it is a card of Maritza with her two dogs. On the right side is a card of Julian holding his anchor, a St. Jude necklace, and underneath that is a card depicting both Yadriel and Julian. The cover depicts Yadriel, holding a marigold, with Julian behind him, surrounded by graves and marigold petals. In the background, Lady Death hovers behind the two in front of a full moon." /></a></div>
 							
 							<section class="basics">
 								<p>May 31, 2023 - June 5, 2023</p>
