--- a/main-reviews/4-rwrb.html
+++ b/main-reviews/4-rwrb.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Red, White & Royal Blue by Casey McQuiston</h1>
-							<div class="image main"><img src="../images/rwrb.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/41150487-red-white-royal-blue?ref=nav_sb_ss_1_9"><img src="../images/rwrb.jpg" alt="An image of the Red, White & Royal Blue cover. Alex Claremont-Diaz and Prince Henry lean agasint the title words in front of a pink background."/></a></div>
 							
 							<section class="basics">
 								<p>June 9, 2023 - June 23, 2023</p>
