--- a/main-reviews/5-whispering.html
+++ b/main-reviews/5-whispering.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Under the Whispering Door by TJ Klune</h1>
-							<div class="image main"><img src="../images/whispering.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/53205888-under-the-whispering-door?ref=nav_sb_ss_1_11"><img src="../images/whispering.jpg" alt="An image of the Under the Whispering Door cover. Under the title is a tall misshapen tea shop. In the background lay the shadows of tall trees and giant stag towering over the shop."/></a></div>
 							
 							<section class="basics">
 								<p>June 24, 2023 - June 28, 2023</p>
