--- a/main-reviews/6-sunbearer.html
+++ b/main-reviews/6-sunbearer.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Sunbearer Trials by Aiden Thomas</h1>
-							<div class="image main"><img src="../images/sunbearer.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/53205888-under-the-whispering-door?ref=nav_sb_ss_1_11"><img src="../images/sunbearer.jpg" alt="An image of a hardcover copy of the Sunbearer trials leaned agasint a wall surrounded by trading cards of all the contestants. The first row above the books depicts Niya and Marino. The second row contains cards for Teo and Xio. On the left side of the book is Aurelio, Atzi, then Ocelo in a column. On the right side is Auristela, Dezi, and Xochi. The cover depicts Teo looking back over his shoulder, colorful wings displayed, with a sun crown in his hair and a glowing skull in his hand."/></a></div>
 							
 							<section class="basics">
 								<p>June 30, 2023 - July 18, 2023</p>
