--- a/main-reviews/7-katzenjammer.html
+++ b/main-reviews/7-katzenjammer.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Katzenjammer by Francesca Zappia</h1>
-							<div class="image main"><img src="../images/katzenjammer.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/59147741-katzenjammer?ref=nav_sb_ss_1_12"><img src="../images/katzenjammer.jpg" alt="An image of the Katzenjammer cover. Kat takes up most of the cover with her cat mask, holding a fluffy dandelion and surrounded by blue flowers in the background. Under the title at the bottom of the cover lay the tagline: Some memories have claws. But so does she."/></a></div>
 							
                             <section class="basics">
 							    <p> March 28, 2023 - July 25, 2023 </p>
