--- a/main-reviews/8-neverwoods.html
+++ b/main-reviews/8-neverwoods.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Lost in the Never Woods by Aidan Thomas</h1>
-							<div class="image main"><img src="../images/neverwoods.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/39897752-lost-in-the-never-woods?ref=nav_sb_ss_1_22"><img src="../images/neverwoods.jpg" alt="An image of the Lost in the Neverwoods cover. Wendy has her back towards us walking into the gaping darkness of a fantastical forest. Giant colorful tree trunks and roots frame the title and figure of Wendy."/></a></div>
 							
 							<section class="basics">
 								<p> July 21, 2023 - August 11, 2023 </p>
