--- a/main-reviews/9-girl.html
+++ b/main-reviews/9-girl.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The Girl Who Fell Beneath the Sea by Axie Oh</h1>
-							<div class="image main"><img src="../images/girl.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/56978100-the-girl-who-fell-beneath-the-sea?ref=nav_sb_ss_1_29"><img src="../images/girl.jpg" alt="An image of the very intricate cover for the Girl Who Fell Beneath the Sea. Mina is dressed in a traditional Korean hanbok with her skirt turning into a pond filled with waves, lotus flowers, and a paper boat. In the background are mountains, a temple, and the side profile of Lord Shin. The two are connected by a red string tied to their hands with a magpie flying above it."/></a></div>
 							
                             <section class="basics">
 								<p> August 14, 2023 - August 25, 2023 </p>
