--- a/archive-reviews/caraval.html
+++ b/archive-reviews/caraval.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Caraval by Stephanie Garber</h1>
-							<div class="image main"><img src="../images/caraval.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/27883214-caraval?from_search=true&from_srp=true&qid=JGdGcdp5MW&rank=1"><img src="../images/caraval.jpg" alt="A copy of Caraval sits face forward on a book shelf. On the left are visible spines for books called Cress, Winter, and Gilded. To the right are book spines for Supernova and Eragon. Above Caraval lay the horizontal spines for books titled Finale and Once Upon a Broken Heart. The cover depicts the title written in an elaborate script, with a blue starburst behind it and red line art surrounding everything. The tagline reads: Remeber it's only a game..."/></a></div>
 							
                             <section class="basics">
 							    <p>June 12, 2023 - June 13, 2023 </p>
