--- a/main-reviews/3-cerulean.html
+++ b/main-reviews/3-cerulean.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>The House in the Cerulean Sea by TJ Klune</h1>
-							<div class="image main"><img src="../images/cerulean.jpg" alt="" /></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/45047384-the-house-in-the-cerulean-sea?ref=nav_sb_ss_1_8"><img src="../images/cerulean.jpg" alt="An image of the cover for House in the Cerulean Sea. A grand manor house sits at the edge of a large cliff overlooking the sea and rising sun."/></a></div>
 							
 							<section class="basics">
 								<p>June 5, 2023 - June 8, 2023</p>
