--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/purplebook.png" alt="" /></span><span class="title">Sarah's Shelf</span>
+									<span class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/52991/open-book">Book</a><a class="star-link"> icon by</a> <a class="star-link" target="_blank" href="https://icons8.com">Icons8</a></span>
 								</a>
 
 							<!-- Nav -->
@@ -48,10 +49,9 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1 class="index">This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+								<h1 class="index">Welcome to my book blog!</h1>
 								
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>Here you can find all the thoughts and opinions I have about the books I've been reading. Check out my most recent reviews here on the home page or look back through the archive for older reads. Note, all of my reviews contain spoiler tags and content warnings. Happing reading!</p>
 							</header>
 
 							<section class="tiles">
