--- a/main-reviews/10-rot.html
+++ b/main-reviews/10-rot.html
@@ -21,9 +21,10 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="../index.html" class="logo">
-									<span class="symbol"><img src="../images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a>
+							<a href="index.html" class="logo">
+								<span class="symbol"><img src="../images/purplebook.png" alt="" /></span><span class="title">Sarah's Shelf</span>
+								<span class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/52991/open-book">Book</a><a class="star-link"> icon by</a> <a class="star-link" target="_blank" href="https://icons8.com">Icons8</a></span>
+							</a>
 
 							<!-- Nav -->
 								<nav>
