Logo Links & Star Ratings
Fixed all the logo links on the reviews (I didn't have the links moving out of the folders)

Added the logo link to the archive page (bc I forgot that)

Changed all star ratings so they are out of 5 stars

Edited the star ratings for Caraval, because I forgot to add the star image to the original rating

--- a/archive-reviews/caraval.html
+++ b/archive-reviews/caraval.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-							<a href="index.html" class="logo">
+							<a href="../index.html" class="logo">
 								<span class="symbol"><img src="../images/purplebook.png" alt="" /></span><span class="title">Sarah's Shelf</span>
 								<span class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/52991/open-book">Book</a><a class="star-link"> icon by</a> <a class="star-link" target="_blank" href="https://icons8.com">Icons8</a></span>
 							</a>
@@ -53,8 +53,9 @@
 							
                             <section class="basics">
 							    <p>June 12, 2023 - June 13, 2023 </p>
-							    <p>Original Rating (2017): *5</p>
-                                <p><img class="star" src="../images/icons8-star-48.png">3.5</p>
+							    <p>Original rating (2017):<img class="star" src="../images/icons8-star-48.png">5/5</p>
+								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
+								<p>Re-Read (2023):<img class="star" src="../images/icons8-star-48.png">3.5/5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
 							    <p> YA, Fantasy, Romance </p>
