--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-							<a href="index.html" class="logo">
+							<a href="../index.html" class="logo">
 								<span class="symbol"><img src="../images/purplebook.png" alt="" /></span><span class="title">Sarah's Shelf</span>
 								<span class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/52991/open-book">Book</a><a class="star-link"> icon by</a> <a class="star-link" target="_blank" href="https://icons8.com">Icons8</a></span>
 							</a>
@@ -53,9 +53,9 @@
 							
                             <section class="basics">
 							    <p>June 13, 2023 - June 21, 2023 </p>
-							    <p>Original rating (2019):<img class="star" src="../images/icons8-star-48.png">5</p>
+							    <p>Original rating (2019):<img class="star" src="../images/icons8-star-48.png">5/5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
-								<p>Re-Read (2023):<img class="star" src="../images/icons8-star-48.png">4</p>
+								<p>Re-Read (2023):<img class="star" src="../images/icons8-star-48.png">4/5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
 							    <p> Audiobook </p>
 							    <p> YA, Fantasy, Romance </p>
