--- a/main-reviews/2-cemetery.html
+++ b/main-reviews/2-cemetery.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-							<a href="index.html" class="logo">
+							<a href="../index.html" class="logo">
 								<span class="symbol"><img src="../images/purplebook.png" alt="" /></span><span class="title">Sarah's Shelf</span>
 								<span class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/52991/open-book">Book</a><a class="star-link"> icon by</a> <a class="star-link" target="_blank" href="https://icons8.com">Icons8</a></span>
 							</a>
@@ -53,7 +53,7 @@
 							
 							<section class="basics">
 								<p>May 31, 2023 - June 5, 2023</p>
-                            	<p><img class="star" src="../images/icons8-star-48.png">4</p>
+                            	<p><img class="star" src="../images/icons8-star-48.png">4/5</p>
 								<p class="star-link"><a class="star-link" target="_blank" href="https://icons8.com/icon/80355/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p>
                             	<p> Audiobook </p>
                             	<p>YA, Fantasy, Mythology, Paranormal, Romance, LGBT+ </p>
