Content Warnings (and list style for Review Archive)
Changed all the reviews to have Content Warnings

Also changed the list style from the archive page so there are no bullet points. And I added a few more comments to better organize all the formatting I added

--- a/archive-reviews/artificial.html
+++ b/archive-reviews/artificial.html
@@ -66,8 +66,8 @@
                                     <p class="artificial">It’s not what I was hoping for, but I’m still excited for the next installment.</p>
                             </section>
 							
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, violence, gun violence, medical content, blood, murder</p>
                             </details>
 						</div>
