--- a/archive-reviews/legendary.html
+++ b/archive-reviews/legendary.html
@@ -68,8 +68,8 @@
                                     <p class="legendary">I’m super excited to finally finish the series and see how all the new twists/changes to the world turn out in the last book. And hopefully get to see a mix of both Scarlett & Tella’s stories.</p>
                             </section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>blood, vilence, death, murder, abandonment</p>
                             </details>
 						</div>
