--- a/archive-reviews/sacrifice.html
+++ b/archive-reviews/sacrifice.html
@@ -64,12 +64,12 @@
 
                             <section class="review">
                                 <h2 class="sacrifice">Review</h2>
-                                <!--Write and insert review here!!!-->
+                                <!--Write and insert review here!-->
                             
                             </section>
 
-                            <details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+                            <details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, gore, body horror, violence, colonialism, racism, sexual assault/harassment, domestic abuse</p>
                             </details>
 						</div>
