--- a/archive-reviews/sadie.html
+++ b/archive-reviews/sadie.html
@@ -80,8 +80,8 @@
 									<p class="sadie">A quick note on the audio production: This is one of the best audiobooks that I have listened to! There are multiple narrators for the alternating POV chapters, and a lot of Wes' chapters start out like a true crime podcast. If you are at all interested in audiobooks, this one is a great example!</p>
                             </section>
 							
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>pedophilia, child abuse, sexual assault, drub abuse, murder, addiction</p>
                             </details>
 						</div>
