--- a/main-reviews/10-rot.html
+++ b/main-reviews/10-rot.html
@@ -75,8 +75,8 @@
 										<p class="rot">Aside from some of the pacing issues, I loved the rest of the novel. I got very emotional at the end, especially after the forest fight and Wil’s reconciliation with her emotionally absent father. I would’ve accepted if the novel had ended differently, but I’m really glad everyone got a happy ending. Except for Elwood’s father, the chief of police, and the entire cult. There’s always a special vindication when evil organizations are publicly exposed and taken care of.</p>		                
                             </section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br> animal death/cruelty, body horror, child abuse, religious abuse, alcoholsim, gore, police brutality, stalking, pregnancy</p>
                             </details>
 						</div>
