--- a/main-reviews/11-hide.html
+++ b/main-reviews/11-hide.html
@@ -87,8 +87,8 @@
                             
                             </section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, murder, violence, child death, suicide, homophobia, racism</p>
                             </details>
 						</div>
