--- a/main-reviews/2-cemetery.html
+++ b/main-reviews/2-cemetery.html
@@ -70,8 +70,8 @@
                                 <p class="cemetery">I also just learned there’s plans for a sequel, this time from Julian’s pov and I am so incredibly excited.</p>
 							</section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>transphobia, blood, death, deadnaming, violence</p>
                             </details>
 						</div>
