--- a/main-reviews/3-cerulean.html
+++ b/main-reviews/3-cerulean.html
@@ -83,8 +83,8 @@
                             	<p class="cerulean">All-in-all this is such a feel good book with a lot of messages about happiness, morality, prejudice, and family. Highly recommend to anyone who likes magic, found family, and relationship-driven stories.</p>
 							</section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>child abuse, xenophobia, fatphobia, confinement, body shaming</p>
                             </details>
 						</div>
