--- a/main-reviews/4-rwrb.html
+++ b/main-reviews/4-rwrb.html
@@ -69,8 +69,8 @@
                                 <p class="rwrb">This book was so sweet and heartwarming! I don’t usually read contemporary novels or just plain romance novels (as in romance is the main plot instead of a subplot) but so many of my friends adore this book so I thought I’d give it a try. I’m so glad I did! I loved watching the development between Henry and Alex and all the romantic moments they had. I might have to start reading more romance novels.</p>
 							</section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>forced outing, homophobia, sexual content, sexual assault, drug abuse, racism</p>
                             </details>
 						</div>
