--- a/main-reviews/5-whispering.html
+++ b/main-reviews/5-whispering.html
@@ -64,8 +64,8 @@
                                 <p class="whispering">Once again a fantastic book by TJ Klune. His narrators and characters all have such vibrant personalities. As soon as I started I knew I was going to love Wallace as much as I hated him. Yes, he’s awful in the beginning, but he has such a distinctive voice as well. I was having such fun with the characters I completely forgot about the week-long deadline until it showed up near the end (minor spoiler, I guess?) So much of this book is Wallace learning and growing, making connections with Hugo and Nelson and Mei, and adapting to the day-to-day life of Charon’s Crossing. There isn’t much of a plot until the back end of the book and usually that drives me crazy. But I enjoyed this book so much I hardly noticed (though once I did, the tension, questions, and emotional turmoil from the plot kicking in made up for my ensuing apprehension.)</p>
 							</section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, grief, suicide, child death, murder, animal death</p>
                             </details>
 						</div>
