--- a/main-reviews/6-sunbearer.html
+++ b/main-reviews/6-sunbearer.html
@@ -74,8 +74,8 @@
                                 <p class="sunbearer">(Also just had a final thought about the ending. While I love the direction it’s taking, the final chapter would’ve fit much better as the beginning of the second book. The second to last chapter, while certainly not a resolution, feels much more like the end of the first in a series and has enough of a cliffhanger to leave you wanting more. The last chapter is a bit jarring because we get the start of a quest to fix what went wrong but I just ends instead of continuing)</p>
 							</section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>violence, bullying, blood, dysphoria, child abuse, child death, death, fire/burns</p>
                             </details>
 						</div>
