--- a/main-reviews/7-katzenjammer.html
+++ b/main-reviews/7-katzenjammer.html
@@ -83,12 +83,12 @@
 							<p class="katz">Excluding the last 20 pages, I felt like this novel had no substance to it. The ending read like a last ditch effort to make all the bullying, gore, and murder mean something. It tried to impart some wisdom about death, violence, and closure. But there was no development towards a meaning. It just got tossed in as an afterthought, rather than building throughout the novel. Senseless human violence -- that's what Zappia gives us in this book, but her efforts to fight it fall flat</p>
                             </section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br> bullying, gore, violence, eating disorder, gun violence, body horror, hanging</p>
                             </details>
-							<details class="trigger warning">
-								<summary class="trigger warning">Trigger Warning (Major Spoiler/Plot Twist)</summary>
+							<details class="content warning">
+								<summary class="content warning">Content Warning (Major Spoiler/Plot Twist)</summary>
 								<p>mass/school shooting</p>
 							</details>
 						</div>
