--- a/main-reviews/8-neverwoods.html
+++ b/main-reviews/8-neverwoods.html
@@ -68,8 +68,8 @@
                            	 	<p class="neverwoods">I will admit, the last few chapters were entertaining and fun. I suspected part of the plot twist, but didn’t quite grasp the scope of it until the big reveal. And while the lack of communication that exacerbated the reveal was annoying, I was so happy to see some out there theories make it into this version’s lore. However, I can’t help thinking so much of the novel was unnecessary to reach that point. Yes, technically all the development between Peter and Wendy was required for the climax of the story, but again it was all just so slow. It doesn’t fit into the supposed deadline and terrible consequences everyone will face if they fail to find the kids and stop their kidnapper. The ending, and it really was a fantastic ending in my eyes, can’t make up for my lackluster opinion of the rest of the novel.</p>
 							</section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>child death, grief, kidnapping, gun violence, alcoholism, blood</p>
                             </details>
 						</div>
