--- a/main-reviews/9-girl.html
+++ b/main-reviews/9-girl.html
@@ -85,8 +85,8 @@
                             
                             </section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br> death, child death, blood, violence, grief, injury, war</p>
                             </details>
 						</div>
