--- a/archive-reviews/caraval.html
+++ b/archive-reviews/caraval.html
@@ -95,8 +95,8 @@
 
                             </section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>death, blood, murder, child abuse, physical abuse, child abuse</p>
                             </details>
 						</div>
