--- a/main-reviews/12-hallowe'en.html
+++ b/main-reviews/12-hallowe'en.html
@@ -65,8 +65,8 @@
                             
                             </section>
 
-							<details class="trigger warning">
-                                <summary class="trigger warning">Trigger Warnings</summary>
+							<details class="content warning">
+                                <summary class="content warning">Content Warnings</summary>
                                 <p>Mentions or depictions of:<br>child death, murder, death, xenophobia, suicide</p>
                             </details>
 						</div>
