--- a/Archive.html
+++ b/Archive.html
@@ -72,10 +72,16 @@
 								<li><a href="main-reviews/10-rot.html">Together We Rot</a></li>
 								<li><a href="main-reviews/11-hide.html">Hide</a></li>
 								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
-								<!--Did not get to the review for this one. May come back to it if I continue to use the site.
-									<li><a href="archive-reviews/sacrifice.html">The Sacrifice</li>-->
-								<!--Hidden until I finish reading. Might not get done before the assignment is due.
-								<li>Assistant to the Villain</li>-->
+								<li><a href="archive-reviews/sacrifice.html">The Sacrifice</li>
+								<li>Assistant to the Villain</li>
+								<li>In the Hall with the Knife</li>
+								<li>Delicious Monsters</li>
+								<li>Lessons in Chemistry</li>
+								<li>Mister Magic</li>
+								<!--Books in progress
+								<li>She is a Haunting</li>
+								<li>The Last Girls Standing</li>
+								-->
 							</ul>
 						</div>
 					</div>
