--- a/Archive.html
+++ b/Archive.html
@@ -73,11 +73,11 @@
 								<li><a href="main-reviews/11-hide.html">Hide</a></li>
 								<li><a href="main-reviews/12-hallowe'en.html">Hallowe'en Party</a></li>
 								<li><a href="archive-reviews/sacrifice.html">The Sacrifice</li>
-								<li>Assistant to the Villain</li>
-								<li>In the Hall with the Knife</li>
-								<li>Delicious Monsters</li>
-								<li>Mister Magic</li>
-								<li>Lessons in Chemistry</li>
+								<li><a href="archive-reviews/assistant.html">Assistant to the Villain</li>
+								<li><a href="archive-reviews/knife.html">In the Hall with the Knife</li>
+								<li><a href="archive-reviews/deliciousmonsters.html">Delicious Monsters</li>
+								<li><a href="archive-reviews/mistermagic.html">Mister Magic</li>
+								<li><a href="archive-reviews/chemistry.html">Lessons in Chemistry</li>
 								<!--Books in progress
 								<li>She is a Haunting</li>
 								<li>The Last Girls Standing</li>
