In the Hall with the Knife and updated alt text for Assistant image
Updated alt text for cover of Assistant to the Villain

Copied template from Sacrifice & filled out appropriate info for In the Hall with the Knife

--- a/archive-reviews/assistant.html
+++ b/archive-reviews/assistant.html
@@ -49,7 +49,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Assistant to the Villain by Hannah Nicole Maehrer</h1>
-							<div class="image main"><a href="https://www.goodreads.com/book/show/123257687-assistant-to-the-villain?from_search=true&from_srp=true&qid=InGu9Cmk8A&rank=1"><img src="../images/assistant.png" alt="The cover for The Inheritance Games with the tagline: She came from nothing. They have everything. Let the games begin."/></a></div>
+							<div class="image main"><a href="https://www.goodreads.com/book/show/123257687-assistant-to-the-villain?from_search=true&from_srp=true&qid=InGu9Cmk8A&rank=1"><img src="../images/assistant.png" alt="The cover for Assistant to the Villain, with the tagline: Only the Good Die.... Items on the cover include an assortment of weapons, a stack of apples, bottles of poison, Kingsley the frog with his crown and a sign that reads: Halp, a scroll with a x's covering a knight's body, a stack of books on being a villain, a fairy trapped in a jar, a helmet pierced with arrows, and a raven holding a magic wand."/></a></div>
 							
 							<section class="basics">
 								<p>September 25, 2023 - October 1, 2023</p>
