CSS for new reviews
CSS background & font color for all the new reviews

--- a/archive-reviews/assistant.html
+++ b/archive-reviews/assistant.html
@@ -62,18 +62,16 @@
 							<section class="update">
 								<h2 class="assistant"> Update: 15% </h2>
 								<p class="assistant"> <strong>Thoughts so far</strong></p>
-                                    <ul class="assistant">
-                                        <li>This is so absurd but I’m having so much fun with it!</li>
-                                        <li>Love Kingsley.</li> 
-                                        <li>I laughed so hard when the Villain revealed his name. Fantastic snippet of a scene</li>
-                                        <li>Evie has no sense of self-preservation. Loving the sarcastic/berating inner monologue</li>
-                                        <li>This whole novel is very ridiculous/unserious/self-indulgent</li>
-                                        <li>Dialogue is very cringe but I assume that’s intentional given the whole vibes of the book</li>
-                                    </ul>
+                                <p class="assistant">This is so absurd but I’m having so much fun with it!<br>
+                                    Love Kingsley.<br> 
+                                    I laughed so hard when the Villain revealed his name. Fantastic snippet of a scene!<br>
+                                    Evie has no sense of self-preservation. Loving the sarcastic/berating inner monologue.<br>
+                                    This whole novel is very ridiculous/unserious/self-indulgent<br>
+                                    Dialogue is very cringe but I assume that’s intentional given the whole vibes of the book<br>
 
-                                    <p class="assistant">So far a very entertaining palate cleanser after my last few horror novels. It’s ridiculous, self-indulgent, and cringey at times. (The dialogue is not great but I’m taking it as a purposeful choice). It feels abundantly clear that this was made for TikTok, but I’m still entertained.</p>
+                                <p class="assistant">So far a very entertaining palate cleanser after my last few horror novels. It’s ridiculous, self-indulgent, and cringey at times. (The dialogue is not great but I’m taking it as a purposeful choice). It feels abundantly clear that this was made for TikTok, but I’m still entertained.</p>
                                     
-                                    <p class="assistant">My favorite character so far is Kingsley. I’m a pun person so his introduction was a highlight.</p>
+                                <p class="assistant">My favorite character so far is Kingsley. I’m a pun person so his introduction was a highlight.</p>
 							</section>
 									
 							<section class="review">
