--- a/archive-reviews/deliciousmonsters.html
+++ b/archive-reviews/deliciousmonsters.html
@@ -64,7 +64,7 @@
 
                             <section class="review">
                                 <h2 class="deliciousmonsters">Review</h2>
-                                <p>INSERT REVIEW HERE</p>
+                                <p class="deliciousmonsters">INSERT REVIEW HERE</p>
                             
                             </section>
 
