She is a Haunting
Created the files & template for She is a Haunting; linked on the archive page

--- a/Archive.html
+++ b/Archive.html
@@ -78,9 +78,11 @@
 								<li><a href="archive-reviews/deliciousmonsters.html">Delicious Monsters</li>
 								<li><a href="archive-reviews/mistermagic.html">Mister Magic</li>
 								<li><a href="archive-reviews/chemistry.html">Lessons in Chemistry</li>
+								<li><a href="">The Last Girls Standing</li>
+								<li><a href="archive-reviews/haunting.html">She is a Haunting</li>
 								<!--Books in progress
-								<li>She is a Haunting</li>
-								<li>The Last Girls Standing</li>
+								<li>Podcast</li>
+								<li>You're Not Supposed to Die Tonight</li>
 								-->
 							</ul>
 						</div>
